--- a/HollidayLoanCalc.vbproj
+++ b/HollidayLoanCalc.vbproj
@@ -118,6 +118,7 @@
     <Content Include="img\leeroy.jpg" />
     <Content Include="img\LoanCal.jpg" />
     <Content Include="img\logo.png" />
+    <Content Include="img\Scrooge-Money-Charm-600-kristin-kossi.jpg" />
     <Content Include="index.html" />
     <Content Include="js\aos.js" />
     <Content Include="js\bootstrap-datepicker.min.js" />
